fix spacing

--- a/css/generic.css
+++ b/css/generic.css
@@ -539,6 +539,7 @@ a{
   display: inline-flex;
   width: auto;
   align-items: center;
+  justify-content: space-between;
   border: 3px solid var(--primary);
   border-radius: 1rem;
   padding: 0.5rem;
